assets/animations.css
.scale-in-center {
	-webkit-animation: scale-in-center 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: scale-in-center 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

/**
 * ----------------------------------------
 * animation scale-in-center
 * ----------------------------------------
 */
 @-webkit-keyframes scale-in-center {
    0% {
      -webkit-transform: scale(0);
              transform: scale(0);
      opacity: 1;
    }
    100% {
      -webkit-transform: scale(1);
              transform: scale(1);
      opacity: 1;
    }
  }
  @keyframes scale-in-center {
    0% {
      -webkit-transform: scale(0);
              transform: scale(0);
      opacity: 1;
    }
    100% {
      -webkit-transform: scale(1);
              transform: scale(1);
      opacity: 1;
    }
  }

.heartbeat {
	-webkit-animation: heartbeat 1.5s ease-in-out 3 both;
	        animation: heartbeat 1.5s ease-in-out 3 both;
}

/**
 * ----------------------------------------
 * animation heartbeat
 * ----------------------------------------
 */
 @-webkit-keyframes heartbeat {
    from {
      -webkit-transform: scale(1);
              transform: scale(1);
      -webkit-transform-origin: center center;
              transform-origin: center center;
      -webkit-animation-timing-function: ease-out;
              animation-timing-function: ease-out;
    }
    10% {
      -webkit-transform: scale(0.91);
              transform: scale(0.91);
      -webkit-animation-timing-function: ease-in;
              animation-timing-function: ease-in;
    }
    17% {
      -webkit-transform: scale(0.98);
              transform: scale(0.98);
      -webkit-animation-timing-function: ease-out;
              animation-timing-function: ease-out;
    }
    33% {
      -webkit-transform: scale(0.87);
              transform: scale(0.87);
      -webkit-animation-timing-function: ease-in;
              animation-timing-function: ease-in;
    }
    45% {
      -webkit-transform: scale(1);
              transform: scale(1);
      -webkit-animation-timing-function: ease-out;
              animation-timing-function: ease-out;
    }
  }
  @keyframes heartbeat {
    from {
      -webkit-transform: scale(1);
              transform: scale(1);
      -webkit-transform-origin: center center;
              transform-origin: center center;
      -webkit-animation-timing-function: ease-out;
              animation-timing-function: ease-out;
    }
    10% {
      -webkit-transform: scale(0.91);
              transform: scale(0.91);
      -webkit-animation-timing-function: ease-in;
              animation-timing-function: ease-in;
    }
    17% {
      -webkit-transform: scale(0.98);
              transform: scale(0.98);
      -webkit-animation-timing-function: ease-out;
              animation-timing-function: ease-out;
    }
    33% {
      -webkit-transform: scale(0.87);
              transform: scale(0.87);
      -webkit-animation-timing-function: ease-in;
              animation-timing-function: ease-in;
    }
    45% {
      -webkit-transform: scale(1);
              transform: scale(1);
      -webkit-animation-timing-function: ease-out;
              animation-timing-function: ease-out;
    }
  }
  
.text-focus-in {
	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
	animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
}

/**
 * ----------------------------------------
 * animation text-focus-in
 * ----------------------------------------
 */
 @-webkit-keyframes text-focus-in {
        0% {
                -webkit-filter: blur(12px);
                        filter: blur(12px);
                opacity: 0;
        }
        100% {
                -webkit-filter: blur(0px);
                        filter: blur(0px);
                opacity: 1;
        }
        }
        @keyframes text-focus-in {
        0% {
                -webkit-filter: blur(12px);
                        filter: blur(12px);
                opacity: 0;
        }
        100% {
                -webkit-filter: blur(0px);
                        filter: blur(0px);
                opacity: 1;
        }
}

.tracking-in-expand {
	-webkit-animation: tracking-in-expand 2.2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
	        animation: tracking-in-expand 2.2s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
}

/**
 * ----------------------------------------
 * animation tracking-in-expand
 * ----------------------------------------
 */
 @-webkit-keyframes tracking-in-expand {
        0% {
                letter-spacing: -0.5em;
                opacity: 0;
        }
        40% {
                opacity: 0.6;
        }
        100% {
                opacity: 1;
        }
        }
        @keyframes tracking-in-expand {
        0% {
                letter-spacing: -0.5em;
                opacity: 0;
        }
        40% {
                opacity: 0.6;
        }
        100% {
                opacity: 1;
        }
}

.roll-in-blurred-left-1 {
    -webkit-animation: roll-in-blurred-left 3s cubic-bezier(0.230, 1.000, 0.320, 1.000) 2200ms both;
    animation: roll-in-blurred-left 2s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
}

.roll-in-blurred-left-2 {
        -webkit-animation: roll-in-blurred-left 2.8s cubic-bezier(0.230, 1.000, 0.320, 1.000) 2000ms both;
        animation: roll-in-blurred-left 2s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 1s;
}

.roll-in-blurred-left-3 {
        -webkit-animation: roll-in-blurred-left 2.6s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1800ms both;
        animation: roll-in-blurred-left 2s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
}

.roll-in-blurred-left-4 {
        -webkit-animation: roll-in-blurred-left 2.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1600ms both;
        animation: roll-in-blurred-left 2s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
}
/* ... */

